# VideoTrack

./: .gitignore  CMakeLists.txt  README.md
Projects/AVideoTrack/: CMakeLists.txt
Projects/AVideoTrack/src/: main.cpp
Projects/Algorithms/: CMakeLists.txt
Projects/Algorithms/include/: IntervalSegment.h  IntervalSegmentOrganizer.h
Projects/Algorithms/src/: IntervalSegment.cpp  IntervalSegmentOrganizer.cpp  main.cpp
Projects/RenderEngine/: CMakeLists.txt
Projects/RenderEngine/include/: CommonInclude.h  CompositeRenderingObject.h  DefaultEffect.h  Filter.h  FramebufferObject.h  Program.h  RenderingObject.h  RenderingOrder.h  TempDefine.h  TempSticker.h  Text.h  Texture.h
Projects/RenderEngine/src/: CompositeRenderingObject.cpp  DefaultEffect.cpp  Filter.cpp  FramebufferObject.cpp  RenderingObject.cpp  TempSticker.cpp  Text.cpp
